# markdowndown

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: conversion_benchmarks.rs
benches/fixtures/: sample.html  sample.md
docs/: configuration.md  error-handling.md  getting-started.md  performance.md  troubleshooting.md  url-types.md
examples/: async_usage.rs  basic_usage.rs  batch_processing.rs  error_handling.rs  with_configuration.rs
issues/: 000001_project_setup.md  000002_core_types.md  000003_dependencies_setup.md  000004_html_conversion.md  000005_yaml_frontmatter.md  000006_url_detection.md  000007_google_docs_handler.md  000008_office365_handler.md  000009_github_issues_handler.md  000011_error_handling.md  000012_unit_tests.md  000013_integration_tests.md  000014_documentation.md  000015_cli_tool.md  01K0ZPRK5Y2M7KKJK6Z1A4A882.md  01K0ZPYY6B8AHAGRNEPVGENP91.md  01K110KWZ4VZDY7NXFPNYFE035.md
issues/complete/: 000002_core_types.md  000003_dependencies_setup.md  000005_yaml_frontmatter.md  000006_url_detection.md  000007_google_docs_handler.md  000008_office365_handler.md  000009_github_issues_handler.md  000010_unified_api.md  000012_unit_tests.md  000014_documentation.md  000015_cli_tool.md  01K0ZPYY6B8AHAGRNEPVGENP91.md  01K110KWZ4VZDY7NXFPNYFE035.md  url_detection.md
specification/: index.md
src/: client.rs  config.rs  detection.rs  frontmatter.rs  lib.rs  types.rs  utils.rs
src/converters/: config.rs  converter.rs  github.rs  google_docs.rs  html.rs  local.rs  mod.rs  office365.rs  placeholder.rs  postprocessor.rs  preprocessor.rs
tests/: cli_comprehensive_tests.rs  cli_integration_tests.rs  integration_tests.rs
tests/fixtures/: mod.rs  sample_documents.rs
tests/helpers/: common.rs  converters.rs  mod.rs
tests/integration/: config.rs  end_to_end.rs  github_issues.rs  google_docs.rs  html_sites.rs  mod.rs  office365.rs  performance.rs
tests/mocks/: servers.rs
tests/proptest-regressions/: property_tests.txt
tests/unit/: client.rs  detection.proptest-regressions  detection.rs  frontmatter.rs  lib.rs  mod.rs  property_tests.rs  types.rs
(+6 files in other folders)
