[package]
name = "markdowndown"
version = "0.1.0"
edition = "2021"
description = "A Rust library for acquiring markdown from URLs with smart handling"
authors = ["wballard <william@ballard.tech>"]
license = "MIT"
repository = "https://github.com/wballard/markdowndown"
keywords = ["markdown", "url", "converter", "web"]
categories = ["text-processing", "web-programming"]

[lib]
name = "markdowndown"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
# Development dependencies will be added as needed