[package]
name = "markdowndown"
version = "0.1.0"
edition = "2021"
description = "A Rust library for acquiring markdown from URLs with smart handling"
authors = ["wballard <william@ballard.tech>"]
license = "MIT"
repository = "https://github.com/wballard/markdowndown"
keywords = ["markdown", "url", "converter", "web"]
categories = ["text-processing", "web-programming"]

[lib]
name = "markdowndown"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
html2text = "0.6"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.5"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"